--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     background-color: black;
     left: 0px;
     top: 0px;
+    font-family: Nunito;
 }
 
 #mozaika{
@@ -46,45 +47,457 @@ body{
     background-repeat:no-repeat;
 }
 
-#s1{
-    background-color: blue;
-}
-
-#s2{
-    background-color: burlywood;
-}
-
-#s3{
-    background-color:cadetblue;
-}
-
-#s4{
-    background-color:coral;
-}
-
-#s5{
-    background-color:cornflowerblue;
-}
-
-#s6{
-    background-color:cornsilk;
-}
-
-#s7{
-    background-color:yellow;
-}
-
-#s8{
-    background-color:palegreen;
-}
-
-#s9{
-    background-color:yellowgreen;
-}
-
-#s10{
-    background-color:peru;
-}
+    #s1{
+    background-color:  #64382E;
+    }
+    #s2{
+    background-color:  #403B3A;
+    }
+    #s3{
+    background-color:  #5A5657;
+    }
+    #s4{
+    background-color:  #363335;
+    }
+    #s5{
+    background-color:  #512C2C;
+    }
+    #s6{
+    background-color:  #684631;
+    }
+    #s7{
+    background-color:  #3E1C26;
+    }
+    #s8{
+    background-color:  #3B1821;
+    }
+    #s9{
+    background-color:  #35121B;
+    }
+    #s10{
+    background-color:  #32101B;
+    }
+    #s11{
+    background-color:  #2C2E39;
+    }
+    #s12{
+    background-color:  #0B0D12;
+    }
+    #s13{
+    background-color:  #1B2E3B;
+    }
+    #s14{
+    background-color:  #737775;
+    }
+    #s15{
+    background-color:  #614E47;
+    }
+    #s16{
+    background-color:  #655D5A;
+    }
+    #s17{
+    background-color:  #67565D;
+    }
+    #s18{
+    background-color:  #68575D;
+    }
+    #s19{
+    background-color: #4B383C;
+    }
+    #s20{
+    background-color:  #371C1F;
+    }
+    #s21{
+    background-color:  #111219;
+    }
+    #s22{
+    background-color:  #17222A;
+    }
+    #s23{
+    background-color:  #414A51;
+    }
+    #s24{
+    background-color:  #75716A;
+    }
+    #s25{
+    background-color:  #636161;
+    }
+    #s26{
+    background-color:  #6A6861;
+    }
+    #s27{
+    background-color:  #3E241D;
+    }
+    #s28{
+    background-color:  #614E55;
+    }
+    #s29{
+    background-color:  #F2682B;
+    }
+    #s30{
+    background-color:  #32101C;
+    }
+    #s31{
+    background-color:  #151115;
+    }
+    #s32{
+    background-color:  #0E0E13;
+    }
+    #s33{
+    background-color:  #327BE1;
+    }
+    #s34{
+    background-color:  #6F6B67;
+    }
+    #s35{
+    background-color:  #595151;
+    }
+    #s36{
+    background-color:  #F6F0EB;
+    }
+    #s37{
+    background-color:  #68565C;
+    }
+    #s38{
+    background-color:  #5F4E55;
+    }
+    #s39{
+    background-color:  #3B2C2A;
+    }
+    #s40{
+    background-color:  #322023;
+    }
+    #s41{
+    background-color:  #374A58;
+    }
+    #s42{
+    background-color:  #1F232A;
+    }
+    #s43{
+    background-color:  #374A58;
+    }
+    #s44{
+    background-color:  #675E58;
+    }
+    #s45{
+    background-color:  #686668;
+    }
+    #s46{
+    background-color:  #3C3131;
+    }
+    #s47{
+    background-color:  #F01753;
+    }
+    #s48{
+    background-color:  #432B29;
+    }
+    #s49{
+    background-color:  #210C0D;
+    }
+    #s50{
+    background-color:  #3B2C2A;
+    }
+    #s51{
+    background-color:  #100E13;
+    }
+    #s52{
+    background-color:  #1C1F27;
+    }
+    #s53{
+    background-color:  #3B383F;
+    }
+    #s54{
+    background-color:  #586367;
+    }
+    #s55{
+    background-color:  #696A6B;
+    }
+    #s56{
+    background-color:  #4B5768;
+    }
+    #s57{
+    background-color:  #4C3B38;
+    }
+    #s58{
+    background-color:  #432F2C;
+    }
+    #s59{
+    background-color:  #291317;
+    }
+    #s60{
+    background-color:  #392627;
+    }
+    #s61{
+    background-color:  #191E27;
+    }
+    #s62{
+    background-color:  #10232E;
+    }
+    #s63{
+    background-color:  #435967;
+    }
+    #s64{
+    background-color:  #404658;
+    }
+    #s65{
+    background-color:  #50434A;
+    }
+    #s66{
+    background-color:  #677172;
+    }
+    #s67{
+    background-color:  #574848;
+    }
+    #s68{
+    background-color:  #45332F;
+    }
+    #s69{
+    background-color:  #442F2F;
+    }
+    #s70{
+    background-color:  #3E2A2A;
+    }
+    #s71{
+    background-color:  #4D3A3E;
+    }
+    #s72{
+    background-color:  #292B35;
+    }
+    #s73{
+    background-color:  #374A58;
+    }
+    #s74{
+    background-color:  #64706F;
+    }
+    #s75{
+    background-color:  #FAC35F;
+    }
+    #s76{
+    background-color:  #6F675D;
+    }
+    #s77{
+    background-color:  #532925;
+    }
+    #s78{
+    background-color:  #5D3C3E;
+    }
+    #s79{
+    background-color:  #451F23;
+    }
+    #s80{
+    background-color:  #421C21;
+    }
+    #s81{
+    background-color:  #6B5B5D;
+    }
+    #s82{
+    background-color:  #57675C;
+    }
+    #s83{
+    background-color:  #563B26;
+    }
+    #s84{
+    background-color:  #5C2713;
+    }
+    #s85{
+    background-color:  #5F423B;
+    }
+    #s86{
+    background-color:  #66655B;
+    }
+    #s87{
+    background-color:  #5A4748;
+    }
+    #s88{
+    background-color:  #6C5C5E;
+    }
+    #s89{
+    background-color:  #482327;
+    }
+    #s90{
+    background-color:  #391219;
+    }
+    #s91{
+    background-color:  #685A5A;
+    }
+    #s92{
+    background-color:  #685F53;
+    }
+    #s93{
+    background-color:  #683E30;
+    }
+    #s94{
+    background-color:  #5D2E1C;
+    }
+    #s95{
+    background-color:  #746C62;
+    }
+    #s96{
+    background-color:  #4F2C17;
+    }
+    #s97{
+    background-color:  #ADFBF8;
+    }
+    #s98{
+    background-color:  #574A4C;
+    }
+    #s99{
+    background-color:  #6B575C;
+    }
+    #s100{
+    background-color:  #251616;
+    }
+    #s101{
+    background-color:  #5B4948;
+    }
+    #s102{
+    background-color:  #635B4D;
+    }
+    #s103{
+    background-color:  #693921;
+    }
+    #s104{
+    background-color:  #71401C;
+    }
+    #s105{
+    background-color:  #6D543E;
+    }
+    #s106{
+    background-color:  #442F15;
+    }
+    #s107{
+    background-color:  #382B32;
+    }
+    #s108{
+    background-color:  #66585E;
+    }
+    #s109{
+    background-color:  #635359;
+    }
+    #s110{
+    background-color:  #2B1E20;
+    }
+    #s111{
+    background-color:  #C4C4C4;
+    }
+    #s112{
+    background-color:  #716B69;
+    }
+    #s113{
+    background-color:  #5F4331;
+    }
+    #s114{
+    background-color:  #532724;
+    }
+    #s115{
+    background-color:  #71401C;
+    }
+    #s116{
+    background-color:  #3415EE;
+    }
+    #s117{
+    background-color:  #372F33;
+    }
+    #s118{
+    background-color:  #190A07;
+    }
+    #s119{
+    background-color:  #5E5358;
+    }
+    #s120{
+    background-color:  #65565C;
+    }
+    #s121{
+    background-color:  #251315;
+    }
+    #s122{
+    background-color:  #666562;
+    }
+    #s123{
+    background-color:  #623F27;
+    }
+    #s124{
+    background-color:  #633D26;
+    }
+    #s125{
+    background-color:  #6C4013;
+    }
+    #s126{
+    background-color:  #6E6057;
+    }
+    #s127{
+    background-color:  #604733;
+    }
+    #s128{
+    background-color:  #392424;
+    }
+    #s129{
+    background-color:  #4D3729;
+    }
+    #s130{
+    background-color:  #494143;
+    }
+    #s131{
+    background-color:  #260E13;
+    }
+    #s132{
+    background-color:  #63625E;
+    }
+    #s133{
+    background-color:  #63391D;
+    }
+    #s134{
+    background-color:  #5E6066;
+    }
+    #s135{
+    background-color:  #653523;
+    }
+    #s136{
+    background-color:  #4C4446;
+    }
+    #s137{
+    background-color:  #98DFC0;
+    }
+    #s138{
+    background-color:  #140707;
+    }
+    #s139{
+    background-color:  #2C2524;
+    }
+    #s140{
+    background-color:  #655257;
+    }
+    #s141{
+    background-color:  #2D1D1E;
+    }
+    #s142{
+    background-color:  #2A2C35;
+    }
+    #s143{
+    background-color:  #0C0E13;
+    }
+    #s144{
+    background-color:  #1E2936;
+    }
+    #s145{
+    background-color:  #131419;
+    }
+    #s146{
+    background-color:  #392424;
+    }
+    #s147{
+    background-color:  #2C2524;
+    }
+    #s148{
+    background-color:  #0E0606;
+    }
+    #s149{
+    background-color:  #3A2122;
+    }
+    #s150{
+    background-color:  #483738;
+    }
+    
 /* stopka */
 
 #stopka{
@@ -100,35 +513,37 @@ body{
 #autor{
     position: absolute;
     width: 375em;
-    height: 37em;
     left: 0px;
     top: 0px;
 
-    font-family: Nunito;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
     line-height: 16px;
     text-align: center;
 
-    color: rgba(255, 255, 255, 0.7);
+    color: whitesmoke;
 }
 
 /* Kontakt */
 
 #kontakt{
     position: absolute;
-    width: 100%;
-    height: 50px;
+    width: 375px;
+    height: 22px;
     right: 0px;
-    top: 3em;
+    top: calc(50% - 22px/2 + 2px);
+    
     font-family: Nunito;
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
+    line-height: 110.9%;
+    /* or 10px */
+    
     text-align: center;
+    
     color: rgba(255, 255, 255, 0.78);
-    margin-top: 10px;
 }
 
 #kontakt p{
