--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lato:wght@100&family=Raleway:wght@300&display=swap');
+
 *{
     max-width: 100%;
 }
 
 body{
     background-color: black !important;
-    font-family: Nunito;
+    font-family: 'Dancing Script', cursive;
+
+    font-family: 'Lato', sans-serif;
+
+    font-family: 'Raleway', sans-serif;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -65,7 +71,11 @@ body{
 
 #kontakt{
     
-    font-family: Nunito;
+    font-family: 'Dancing Script', cursive;
+
+    font-family: 'Lato', sans-serif;
+
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
@@ -586,28 +596,33 @@ body{
 
 
 
-
-
   /*Animations*/
 
 #s29 {
-	background: linear-gradient(-100deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background: linear-gradient(-250deg,#23d5ab,#23a6d5,#e73c7e, #ee7752);
 	background-size: 400% 400%;
-	animation: gradient 5s ease-in infinite;
+	animation: gradient 10s ease-in infinite;
+    
 }
 
 #s33 {
-	background: linear-gradient(-100deg,#5fb6e9,#327BE1, #327BE1,#3cb3ee);
+	background: linear-gradient(-100deg, #23d5ab,#23a6d5,#e73c7e,#ee7752);
     background-size: 500% 500%;
-	animation: gradient 5s ease infinite;
+    animation: gradient 10s ease-in infinite;
 }
 
-#s36 {
-	background: linear-gradient(-100deg,#327BE1, #babcbd,#babcbd,#327BE1,);
-	background-size: 200% 200%;
-	animation: gradient 5s ease infinite;
+#s47{
+   
 }
 
+.modal-header{
+    border:none;
+}
+
+
+.btn-close{
+    text-align: right;
+}
 
 @keyframes gradient {
 	0% {
@@ -620,4 +635,3 @@ body{
 		background-position: 0% 50%;
 	}
 }
-
