--- a/style.css
+++ b/style.css
@@ -92,6 +92,11 @@ body{
     color: white;
 }
 
+.modal-header{
+    border:none;
+    align-items: right;
+}
+
 .modal-content{
     background-color: black;
 }
@@ -99,15 +104,15 @@ body{
 .modal-body p{
     color: white;
     text-align: center;
-}
-
-.modal-header{
-    border:none;
+    font-size: 0.8rem;
+    margin-bottom: 0;
 }
 
 .description{
-    padding-top: 20px;
+    padding-top: 0.9rem;
 }
+
+
 .square {
     float:left;
     position: relative;
@@ -117,9 +122,6 @@ body{
     background-repeat:no-repeat;
 }
 
-button.btn-close {
-    text-align: right;
-}
 
 
 #s1{
@@ -453,7 +455,7 @@ button.btn-close {
     background-color:  #2B1E20;
 }
 #s111{
-    background-color:  #C4C4C4;
+    background-color: #635B4D;
 }
 #s112{
     background-color:  #716B69;
@@ -577,7 +579,7 @@ button.btn-close {
 
 
   /*Animations*/
-
+/*
 #s29 {
 	background: linear-gradient(-250deg,#23d5ab,#23a6d5,#e73c7e, #ee7752);
 	background-size: 400% 400%;
@@ -609,7 +611,7 @@ button.btn-close {
 }
 
 
-
+*/
 
 
 
