--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 10px;
+  background-color: black;
   /*display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -43,6 +44,16 @@ body {
           ". . . . . . . . . .";
           */
 }
+
+.square {
+    float: left;
+    position: relative;
+    width: 10%;
+    padding-bottom: 10%; /* = width for a 1:1 aspect ratio */
+    background-position: center center;
+    background-repeat: no-repeat;
+    opacity: 70%;
+  }
 
 /* stopka */
 
@@ -111,23 +122,44 @@ body {
   text-align: center;
 }
 
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 25%;
+  padding: 3%;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+div.column>img{
+  pointer-events: auto;
+  cursor: pointer;
+  transition: transform .3s;
+}
+
+div.column>img:hover{
+  transform: scale(1.5);
+}
+
+#modal-7 > div:nth-child(2){
+  margin-top: 15%;
+  height: 0;
+  max-width: 80%;
+}
+
+
+
 .description {
   padding-top: 0.9rem;
   text-align: center;
 }
 
-.modal-footer {
-}
 
-.square {
-  float: left;
-  position: relative;
-  width: 10%;
-  padding-bottom: 10%; /* = width for a 1:1 aspect ratio */
-  background-position: center center;
-  background-repeat: no-repeat;
-  opacity: 70%;
-}
 
 #s1 {
   background-color: #64382e;
@@ -632,6 +664,9 @@ body {
 /*Responsive attr*/
 
 @media only screen and (min-width: 400px) {
+  .row{
+    margin-left: 20%;
+  }
   body {
     height: 20vh;
     margin-left: 50px;
@@ -641,6 +676,9 @@ body {
 }
 
 @media only screen and (max-width: 400px) {
+  .row{
+    margin-left: 20%;
+  }
   img {
     max-height: 120vw;
   }
@@ -651,11 +689,16 @@ body {
   body {
     padding-top: 10%;
   }
+
+
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 
 @media only screen and (min-width: 600px) {
+  .row{
+    margin-left: 0%;
+  }
   #mozaika {
     margin-left: 12.5%;
     margin-right: 12.5%;
@@ -668,6 +711,8 @@ body {
     /* = width for a 1:1 aspect ratio */
     background-position: center center;
     background-repeat: no-repeat;
+    border: 0;
+    outline: none;
   }
 
   p {
@@ -753,8 +798,8 @@ body {
 
   .square {
     position: relative;
-    width: 74px;
-    padding-bottom: 74px;
+    width: 6.4%;
+    padding-bottom: 6.4%;
     /* = width for a 1:1 aspect ratio */
     background-position: center center;
     background-repeat: no-repeat;
@@ -788,3 +833,4 @@ body {
     margin: auto;
   }
 }
+
