--- a/style.css
+++ b/style.css
@@ -673,6 +673,7 @@ div.column>img:hover{
     margin-right: 50px;
     margin-top: 50px;
   }
+
 }
 
 @media only screen and (max-width: 400px) {
@@ -682,6 +683,29 @@ div.column>img:hover{
   img {
     max-height: 120vw;
   }
+
+  /* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 50%;
+  padding: 3%;
+}
+}
+
+@media only screen and (max-width: 600px){
+  .column {
+    float: left;
+    width: 50%;
+    padding: 3%;
+  }
+
+
+#modal-7 > div:nth-child(2){
+  margin-top: 15%;
+  height: 0;
+  max-width: 80%;
+
+}
 }
 
 /* Extra small devices (phones, 600px and down) */
