--- a/style.css
+++ b/style.css
@@ -693,6 +693,10 @@ div.column>img:hover{
 }
 
 @media only screen and (max-width: 600px){
+  .container{
+    margin-left: 10%;
+  }
+
   .column {
     float: left;
     width: 50%;
